--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,163 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  height: 100vh;
+  width: 100vw;
+  background-color: #34495e;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+.hangman {
+  padding-top: 20px;
+  text-align: center;
+  min-height: 100vh;
+  position: relative;
+}
+
+h1 {
+  font-size: 4rem;
+  padding-bottom: 20px;
+}
+
+p {
+  font-size: 2.2rem;
+}
+
+.main {
+  padding-top: 8rem;
+  display: flex;
+  gap: 15rem;
+}
+
+.figure-container {
+  fill: transparent;
+  stroke: #fff;
+  stroke-width: 0.5rem;
+  stroke-linecap: round;
+  width: 20rem;
+}
+
+.figure-part {
+  visibility: hidden;
+}
+
+.show-figure-part {
+  visibility: visible;
+}
+
+.wrong-container {
+  visibility: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 20rem;
+}
+
+.show-wrong-container {
+  visibility: visible;
+}
+
+.wrong-container p {
+  padding-bottom: 1.5rem;
+}
+
+span {
+  font-size: 2.5rem;
+  font-weight: 500;
+  width: 3rem;
+  height: 6rem;
+}
+
+.wrong-letter ~ .wrong-letter::before {
+  content: ", ";
+}
+
+.correct-letters {
+  padding-top: 5rem;
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.correct-letter {
+  font-size: 3.5rem;
+  padding: 0.5rem;
+  border-bottom: 0.4rem solid #2980b9;
+}
+
+.popup-container {
+  visibility: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.show-popup-container {
+  visibility: visible;
+}
+
+.popup {
+  padding: 3rem;
+  background-color: #2980b9;
+  box-shadow: 0 15px 10px 3px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+}
+
+.popup h2 {
+  font-size: 3.5rem;
+  padding-top: 2rem;
+  padding-bottom: 4rem;
+}
+
+.popup button {
+  font-size: 2rem;
+  padding: 1rem 1.5rem;
+  color: #2980b9;
+  font-weight: 500;
+  border-radius: 5px;
+  border: 1px solid #2980b9;
+  cursor: pointer;
+}
+
+.notification {
+  visibility: hidden;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 1rem;
+  background-color: rgba(0, 0, 0, 0.3);
+  border-radius: 5px;
+}
+
+.show-notification {
+  visibility: visible;
 }
